Muñequito terminado oficialmente

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dibujo con Canva Alejandro Ayala</title>
+    <title>Dibujo con Canvas Alejandro Ayala</title>
 </head>
 <body>
-    
+    <canvas id="lienzo"></canvas>
+
     <script src="dibujo.js"></script>
 </body>
 </html>
